@startuml AirQuality_ER_Diagram

!define TABLE(name) entity name
!define PK(x) <b>PK:</b> x
!define FK(x) <b>FK:</b> x

' GEOSPATIAL & MONITORING (Operational)

entity Station {
  * id : int <<PK>>
  --
  * name : varchar
  * latitude : float
  * longitude : float
  * city : varchar
  * country : varchar
  region_id : int <<FK>>
  provider_id : int <<FK>>
  created_at : timestamp
}

entity Provider {
  * id : int <<PK>>
  --
  * name : varchar <<unique>>
  api_endpoint : varchar
  api_key : varchar
  ingestion_frequency_minutes : int
  created_at : timestamp
}

entity AirQualityReading {
  * id : int <<PK>>
  --
  * station_id : int <<FK>>
  * pollutant_id : int <<FK>>
  provider_id : int <<FK>>
  * datetime : timestamp
  * value : float
  aqi : int
  raw_json : jsonb
  created_at : timestamp
}

entity Pollutant {
  * id : int <<PK>>
  --
  * name : varchar <<unique>>
  unit : varchar
  description : text
}

entity MapRegion {
  * id : int <<PK>>
  --
  * name : varchar <<unique>>
  description : text
  geom : geometry
}

' USERS & ACCESS CONTROL (Operational)

entity AppUser {
  * id : int <<PK>>
  --
  * username : varchar <<unique>>
  * email : varchar <<unique>>
  * password_hash : varchar
  full_name : varchar
  location : varchar
  * role_id : int <<FK>>
  is_active : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity Role {
  * id : int <<PK>>
  --
  * name : varchar <<unique>>
  description : text
  created_at : timestamp
}

entity Permission {
  * id : int <<PK>>
  --
  * name : varchar <<unique>>
  description : text
}

entity RolePermission {
  * role_id : int <<FK>>
  * permission_id : int <<FK>>
  --
  <<composite PK>>
}

' ALERTS & RECOMMENDATIONS (Operational)

entity Alert {
  * id : int <<PK>>
  --
  * user_id : int <<FK>>
  * station_id : int <<FK>>
  * pollutant_id : int <<FK>>
  * threshold : float
  trigger_condition : varchar
  notification_method : varchar
  is_active : boolean
  triggered_at : timestamp
  created_at : timestamp
}

entity Recommendation {
  * id : int <<PK>>
  --
  * user_id : int <<FK>>
  * station_id : int <<FK>>
  aqi_band : int
  * message : text
  created_at : timestamp
}

entity ProductRecommendation {
  * id : int <<PK>>
  --
  * recommendation_id : int <<FK>>
  * product_name : varchar
  product_category : varchar
  product_url : varchar
}

' REPORTING & ANALYTICS (Operational and Analytical)

entity Report {
  * id : int <<PK>>
  --
  * user_id : int <<FK>>
  station_id : int <<FK>>
  pollutant_id : int <<FK>>
  * title : varchar
  * start_date : date
  * end_date : date
  file_format : varchar
  file_path : varchar
  created_at : timestamp
  generated_at : timestamp
}

entity AirQualityDailyStats {
  * id : int <<PK>>
  --
  * station_id : int <<FK>>
  * pollutant_id : int <<FK>>
  * date : date
  avg_value : float
  avg_aqi : int
  max_aqi : int
  min_aqi : int
  readings_count : int
  created_at : timestamp
}

' RELATIONSHIPS

' Geospatial & Monitoring
Station }o--|| MapRegion : "belongs to"
Station }o--|| Provider : "managed by"
AirQualityReading }o--|| Station : "measured at"
AirQualityReading }o--|| Pollutant : "measures"
AirQualityReading }o--|| Provider : "sourced from"

' Users & Access Control
AppUser }o--|| Role : "has"
RolePermission }o--|| Role : "defines"
RolePermission }o--|| Permission : "grants"

' Alerts & Recommendations
Alert }o--|| AppUser : "configured by"
Alert }o--|| Station : "monitors"
Alert }o--|| Pollutant : "tracks"
Recommendation }o--|| AppUser : "for"
Recommendation }o--|| Station : "at"
ProductRecommendation }o--|| Recommendation : "suggests"

' Reporting & Analytics
Report }o--|| AppUser : "generated by"
Report }o--|| Station : "for"
Report }o--|| Pollutant : "about"
AirQualityDailyStats }o--|| Station : "aggregates"
AirQualityDailyStats }o--|| Pollutant : "summarizes"

@enduml
